Fixes #18 - Wrap long text on the site

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@ $headerFontFamily: "Dosis", $sansFontFamily;
 
 html {
   overflow-y: scroll;
+  word-wrap: break-word;
 }
 
 html, a { font-weight: 400; }
